--- a/rts/lra-examples/cdi-embedded/pom.xml
+++ b/rts/lra-examples/cdi-embedded/pom.xml
@@ -44,6 +44,7 @@
 
     <dependencies>
         <!-- include an embedded LRA coordinator -->
+        <!--        We need to specify the proper version of lra dependencies otherwise quarkus-bom determines them-->
         <dependency>
             <groupId>org.jboss.narayana.lra</groupId>
             <artifactId>lra-coordinator-jar</artifactId>
@@ -57,6 +58,16 @@
             <artifactId>narayana-lra</artifactId>
             <version>${version.org.jboss.narayana.lra}</version>
         </dependency>
+        <dependency>
+	        <groupId>org.jboss.narayana.lra</groupId>
+	        <artifactId>lra-client</artifactId>
+	        <version>${version.org.jboss.narayana.lra}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.jboss.narayana.lra</groupId>
+	        <artifactId>lra-proxy-api</artifactId>
+	        <version>${version.org.jboss.narayana.lra}</version>
+	    </dependency>
 
 
         <!-- MP LRA CDI support defines annotations for controlling the lifecycle
