--- a/compensating-transactions/non-transactional_resource/pom.xml
+++ b/compensating-transactions/non-transactional_resource/pom.xml
@@ -61,6 +61,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>${version.junit-platform-launcher}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.arquillian.junit5</groupId>
       <artifactId>arquillian-junit5-container</artifactId>
       <version>${version.org.jboss.arquillian}</version>
