--- a/compensating-transactions/pom.xml
+++ b/compensating-transactions/pom.xml
@@ -20,6 +20,7 @@
 
   <properties>
     <sortpom.skip>false</sortpom.skip>
+    <version.junit-platform-launcher>1.14.2</version.junit-platform-launcher>
   </properties>
 
   <build>
