--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -35,8 +35,7 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-jdk14</artifactId>
-      <version>1.5.6</version>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss</groupId>
